--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
           </li>
         </ul>
         <form class="d-flex" role="search" action="{% url 'catalog:search' %}" method="get">
-          <input class="form-control me-2" type="search"  name="q" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2" type="search" name="q" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success text-white" type="submit">Поиск</button>
         </form>
       </div>
@@ -89,7 +89,8 @@
         <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
           {% tag_categories as categories %}
           {% for category in categories %}
-          <li><a class="dropdown-item text-white" href="{% url 'catalog:index' category.slug %}">{{ category.name }}</a></li>
+          <li><a class="dropdown-item text-white" href="{% url 'catalog:index' category.slug %}">{{ category.name }}</a>
+          </li>
           {% endfor %}
         </ul>
       </div>
@@ -180,8 +181,8 @@
       </div>
       <div class="col-lg-10">
         <!-- Контент на странице -->
-        {% block content %}
-        {% endblock %}
+        {% include 'includes/notifications.html' %}
+        {% block content %}{% endblock %}
       </div>
     </div>
   </div>
